--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out">
-            <img src="assets/img/home.png" class="img-fluid animated" style="width: 75%; height: auto;" alt="">
+            <img src="assets/img/home.png" class="img-fluid animated"  alt="">
           </div>
         </div>
       </div>
@@ -116,7 +116,7 @@
           </div>
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="assets/img/latar-belakang.jpg" class="img-fluid" style="width: 80%; height: auto;" alt="">
+            <img src="assets/img/latar-belakang.jpg" class="img-fluid responsive-image" alt="">
           </div>
 
         </div>
@@ -183,7 +183,7 @@
         <div class="row gy-5">
 
           <div class="col-xl-6" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/kontruk.jpg" class="img-fluid" style="width: 80%; height: auto; margin-left: 80px;"  alt="">
+            <img src="assets/img/kontruk.jpg" class="img-fluid responsive-image" alt="">>
           </div>
 
           <div class="col-xl-6 d-flex">
