--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="row gy-5">
 
           <div class="col-xl-6" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/kontruk.jpg" class="img-fluid responsive-image" alt="">>
+            <img src="assets/img/kontruk.jpg" class="img-fluid responsive-image" alt="">
           </div>
 
           <div class="col-xl-6 d-flex">
