--- a/index.html
+++ b/index.html
@@ -85,6 +85,58 @@
 
     </section><!-- /Hero Section -->
 
+    <!-- Team Section -->
+    <section id="team" class="team section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Team</h2>
+        <p>Our team</p>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/Dr-Anugriaty.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Dr. Anugriaty Indah Asmarany, S.Psi., M.Si</h4>
+                <span>93124041</span>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/Dr-Argita.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Dr. Argita Maya Fauzi, S.Psi., M.Si.</h4>
+                <span></span>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/Dr-Azhariah.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Dr. Azhariah Nur B. Arafah, S.Psi., MA</h4>
+                <span></span>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+        </div>
+      </div>
+
+    </section><!-- /Team Section -->
     <!-- About Section -->
     <section id="about" class="about section">
 
@@ -131,6 +183,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Tujuan</h2>
         <p>Tujuan Intervensi<br></p>
+        
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -166,8 +219,33 @@
       </div>
     </section><!-- /Values Section -->
 
-    <!-- Stats Section -->
-    <!-- .......... -->
+    <!-- Values Section -->
+    <section id="values" class="values section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Target</h2>
+        <p>Target Populasi<br></p>
+        
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="card">
+              <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+              <h3>Seluruh lulusan baru perguruan tinggi (fresh-graduate)              </h3>
+              <!-- <p>Quam rem vitae est autem molestias explicabo debitis sint. Vero aliquid quidem commodi.</p> -->
+            </div>
+          </div><!-- End Card Item -->
+
+        </div>
+
+      </div>
+    </section><!-- /Values Section -->
 
     <!-- Features Section -->
     <section id="features" class="features section">
