--- a/seminar.html
+++ b/seminar.html
@@ -162,6 +162,15 @@
                   </ol>
                 </span>
               </li>
+              <li> 
+                <span><i class="bi bi-check-circle"></i><span class="fw-bold"> Problem Solving</span>
+                  <ol class="mt-0 pt-0">
+                    <li>(Membimbing Peserta mengidentifikasi hambatan dan mengembangkan strategi penyelesaian masalah untuk keputusan karir)</li>
+                    <li>Materi: Kemungkinan potensi hambatan karir dan beberapa strategi penanggulangannya  (20 menit)</li>
+                    <li>Tugas: Peserta menyusun beberapa rencana karir  (20 menit)</li>
+                  </ol>
+                </span>
+              </li>
             </ul>
           </div>
 
