--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Career Decision Self-Efficacy</title>
+  <title>NAVIGASIKAN MASA DEPAN, RAIH KARIR IMPIANMU</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -117,7 +117,7 @@
               </div>
               <div class="member-info">
                 <h4>Dr. Argita Maya Fauzi, S.Psi., M.Si.</h4>
-                <span></span>
+                <span>93124040</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -129,7 +129,7 @@
               </div>
               <div class="member-info">
                 <h4>Dr. Azhariah Nur B. Arafah, S.Psi., MA</h4>
-                <span></span>
+                <span>93124006</span>
               </div>
             </div>
           </div><!-- End Team Member -->
