--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="#about">Latar Belakang</a></li>
           <li><a href="#values">Tujuan</a></li>
+          <li><a href="#targets">Target</a></li>
           <li><a href="#features">Kontruk</a></li>
           <li><a href="#recent-posts">Seminar</a></li>
         </ul>
@@ -220,6 +221,7 @@
     </section><!-- /Values Section -->
 
     <!-- Values Section -->
+    <section id="targets" class="targets section">
     <section id="values" class="values section">
 
       <!-- Section Title -->
@@ -310,11 +312,6 @@
       </div>
 
     </section><!-- /Features Section -->
-        </div>
-
-      </div>
-
-    </section><!-- /Team Section -->
 
     <!-- Recent Posts Section -->
     <section id="recent-posts" class="recent-posts section">
