--- a/seminar.html
+++ b/seminar.html
@@ -52,6 +52,7 @@
           <li><a href="index.html#hero" >Home<br></a></li>
           <li><a href="index.html#about">Latar Belakang</a></li>
           <li><a href="index.html#values">Tujuan</a></li>
+          <li><a href="index.html#targets">Target</a></li>
           <li><a href="index.html#features">Kontruk</a></li>
           <li><a href="index.html#recent-posts"class="active">Seminar</a></li>
         </ul>
