--- a/latar-belakang.html
+++ b/latar-belakang.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Career Decision Self-Efficacy</title>
+  <title>Latar Belakang</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -52,6 +52,7 @@
           <li><a href="index.html#hero" >Home<br></a></li>
           <li><a href="index.html#about"class="active">Latar Belakang</a></li>
           <li><a href="index.html#values">Tujuan</a></li>
+          <li><a href="index.html#targets">Target</a></li>
           <li><a href="index.html#features">Kontruk</a></li>
           <li><a href="index.html#recent-posts">Seminar</a></li>
         </ul>
