--- a/Goal-Selection.html
+++ b/Goal-Selection.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Latar Belakang</title>
+  <title>Blog Details - FlexStart Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
 
-<body class="service-details-page">
+<body class="blog-details-page">
 
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
@@ -50,9 +50,9 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" >Home<br></a></li>
-          <li><a href="index.html" class="active">Latar Belakang</a></li>
+          <li><a href="index.html" >Latar Belakang</a></li>
           <li><a href="index.html">Komponen CDSE</a></li>
-          <li><a href="index.html">SMART Framework</a></li>
+          <li><a href="index.html"class="active">SMART Framework</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -66,56 +66,61 @@
 
     <!-- Page Title -->
     <div class="page-title">
+      <div class="heading">
+        <div class="container">
+          <div class="row d-flex justify-content-center text-center">
+            <div class="col-lg-8">
+              <h1 class="mb-5">Komponen CDSE</h1>
+              <!-- <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p> -->
+            </div>
+          </div>
+        </div>
+      </div>
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Latar Belakang</li>
+            <li class="current">Komponen CDSE</li>
           </ol>
         </div>
       </nav>
     </div><!-- End Page Title -->
 
-    <!-- Service Details Section -->
-    <section id="service-details" class="service-details section">
+    <div class="container">
 
-      <div class="container">
+          <!-- Blog Details Section -->
+          <section id="blog-details" class="blog-details section">
+            <div class="container">
 
-        <div class="row gy-5">
+              <article class="article">
 
+                <!-- Content -->
+                 ...
 
+                </div><!-- End post content -->
 
-          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/latar-belakang.jpg" style="width: 70%; height: auto;" alt="" class="img-fluid services-img">
-            <h3>Career Decision Self-Efficacy (CDSE)</h3>
-            <p>
-              Career Decision Self-Efficacy (CDSE) adalah konsep dalam psikologi karier yang merujuk pada keyakinan seseorang terhadap kemampuan dirinya untuk berhasil membuat keputusan karier.
-              Konsep ini berasal dari teori efikasi diri Bandura, yang menekankan pentingnya keyakinan individu dalam menentukan perilaku yang efektif di berbagai situasi, termasuk pengambilan keputusan karier.
-            </p>
-            <p>
-              Sebagian besar mahasiswa belum memiliki keterampilan perencanaan karier dan merupakan indikator-indikator permasalahan penyebab kegagalan belajar karena adanya perbedaan budaya yang bervariasi atau multikultural (Desnelita, 2022).
-            </p>
-            <p>
-              Career Decision Self-Efficacy (CDSE) memainkan peran yang sangat penting dalam proses pengambilan keputusan karier. Ketika individu merasa percaya diri dalam kemampuan mereka untuk membuat pilihan karier yang tepat, mereka cenderung lebih proaktif dalam mencari informasi, mengeksplorasi berbagai opsi, dan mengambil langkah-langkah yang diperlukan untuk mencapai tujuan karier mereka.
-            </p>
-            <p>
-              Hal ini dapat mengarah pada peningkatan kepuasan kerja dan keberhasilan jangka panjang. Sebaliknya, rendahnya CDSE dapat menyebabkan kebingungan dan ketidakpastian dalam memilih jalur karier, yang pada gilirannya dapat memengaruhi motivasi dan kinerja akademik.
-            </p>
-            <p>
-              Berbagai faktor dapat memengaruhi tingkat CDSE seseorang, termasuk pengalaman sebelumnya, dukungan sosial, dan konteks budaya. Dukungan dari keluarga, teman, dan mentor sangat krusial dalam membangun kepercayaan diri individu terhadap kemampuan pengambilan keputusan karier mereka.
-            </p>
-            <p>
-              Selain itu, lingkungan pendidikan yang inklusif dan sensitif terhadap perbedaan budaya dapat membantu mahasiswa mengembangkan keterampilan perencanaan karier yang diperlukan. Dengan memahami dan memperhatikan faktor-faktor ini, institusi pendidikan dapat merancang program yang lebih efektif untuk meningkatkan CDSE di kalangan mahasiswa, sehingga mereka dapat menghadapi tantangan karier di masa depan dengan lebih percaya diri.
-            </p>
-          </div>
+              </article>
 
-        </div>
+            </div>
+          </section><!-- /Blog Details Section -->
 
-      </div>
-
-    </section><!-- /Service Details Section -->
 
   </main>
+
+  <footer id="footer" class="footer">
+
+    <div class="container copyright text-center mt-4">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Career</strong> <span>All Rights Reserved</span></p>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon -->
+      </div>
+    </div>
+
+  </footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
