--- a/contoh.html
+++ b/contoh.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contoh Lengkap dan Referensi Relevan - FlexStart Bootstrap Template</title>
+  <title>CDSE - Contoh Lengkap dan Referensi Relevan</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -43,7 +43,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <img src="assets/img/logo.png" alt="">
-        <h1 class="sitename">Career</h1>
+        <h1 class="sitename">CDSE</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -56,7 +56,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted flex-md-shrink-0" href="index.html#about">Mulai Sekarang</a>
+      <!--  -->
 
     </div>
   </header>
