--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>NAVIGASIKAN MASA DEPAN, RAIH KARIR IMPIANMU</title>
+  <title>CDSE - NAVIGASIKAN MASA DEPAN, RAIH KARIR IMPIANMU</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo.png" alt="">
-        <h1 class="sitename">Career</h1>
+        <h1 class="sitename">CDSE</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -58,7 +58,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted flex-md-shrink-0" href="index.html#about">Mulai Sekarang</a>
+      <!--  -->
 
     </div>
   </header>
@@ -181,7 +181,7 @@
     <!-- Values Section -->
      
     <!-- Values Section -->
-    <section id="values" class="values section">
+    <section id="komponen-cdse" class="values section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -277,7 +277,7 @@
 
                 <hr>
 
-                <a href="Goal-Selection.html" class="readmore stretched-link"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+                <a href="Goal-Selection.html" class="readmore stretched-link"><span>Baca Lebih Lanjut</span><i class="bi bi-arrow-right"></i></a>
 
               </div>
 
