--- a/backup.html
+++ b/backup.html
@@ -105,7 +105,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
+      <a class="btn-getstarted flex-md-shrink-0" href="index.html#about">Mulai Sekarang</a>
       <a class="btn-getstarted flex-md-shrink-0" href="index.html#about">Get Started</a>
 
     </div>
