--- a/contoh.html
+++ b/contoh.html
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: FlexStart
-  * Template URL: https://bootstrapmade.com/flexstart-bootstrap-startup-template/
-  * Updated: Nov 01 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="blog-details-page">
@@ -55,9 +47,6 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <!--  -->
-
     </div>
   </header>
 
@@ -86,73 +75,109 @@
 
     <div class="container">
 
-          <!-- Blog Details Section -->
-          <section id="example" class="example section">
-            <div class="container">
+      <!-- Blog Details Section -->
+      <section id="example" class="example section">
+        <div class="container">
 
-              <div class="section-title" data-aos="fade-up">
-                <h2>Contoh Lengkap</h2>
-              </div>
+          <div class="section-title" data-aos="fade-up">
+            <h2>Contoh Lengkap</h2>
+          </div>
 
-              <div class="content" data-aos="fade-up" data-aos-delay="200">
-                <p>Michael, seorang lulusan Administrasi Bisnis, ingin memulai perusahaannya sendiri dalam 10 tahun.</p>
-                <ol>
-                  <li><strong>Pemilihan Tujuan:</strong> Michael memilih untuk berspesialisasi dalam solusi pengemasan ramah lingkungan.</li>
-                  <li><strong>Membuat Rencana:</strong>
-                    <ul>
-                      <li><strong>Jangka Pendek:</strong> Mendapatkan pengalaman di industri pengemasan.</li>
-                      <li><strong>Jangka Menengah:</strong> Menabung modal dan membangun jaringan pemasok.</li>
-                      <li><strong>Jangka Panjang:</strong> Meluncurkan bisnis dan memperluas operasi.</li>
-                    </ul>
-                  </li>
-                  <li><strong>Pemecahan Masalah:</strong> Ketika ia menghadapi kesulitan pendanaan, Michael mengajukan aplikasi ke inkubator startup dan platform crowdfunding, serta merevisi garis waktu untuk mengakomodasi keterlambatan.</li>
-                </ol>
-              </div>
-
-            </div>
-          </section>
-
-          <!-- References Section -->
-            <div class="container">
-
-              <div class="section-title" data-aos="fade-up">
-                <h2>Referensi Relevan</h2>
-              </div>
-
-              <div class="content" data-aos="fade-up" data-aos-delay="200">
-                <h2>Buku :</h2>
+          <div class="content" data-aos="fade-up" data-aos-delay="200">
+            <p>Michael, seorang lulusan Administrasi Bisnis, ingin memulai perusahaannya sendiri dalam 10 tahun.</p>
+            <ol>
+              <li><strong>Pemilihan Tujuan:</strong> Michael memilih untuk berspesialisasi dalam solusi pengemasan ramah lingkungan.</li>
+              <li><strong>Membuat Rencana:</strong>
                 <ul>
-                  <li>Locke, E. A., & Latham, G. P. (2002). A Theory of Goal Setting and Task Performance. Englewood Cliffs: Prentice-Hall.</li>
-                  <li>Bandura, A. (1997). Self-Efficacy: The Exercise of Control. New York: W.H. Freeman and Company.</li>
-                  <li>Gollwitzer, P. M. (1999). Implementation Intentions: Strong Effects of Simple Plans. Guilford Press.</li>
-                  <li>Savickas, M. L. (2011). Career Counseling. Washington, DC: American Psychological Association.</li>
+                  <li><strong>Jangka Pendek:</strong> Mendapatkan pengalaman di industri pengemasan.</li>
+                  <li><strong>Jangka Menengah:</strong> Menabung modal dan membangun jaringan pemasok.</li>
+                  <li><strong>Jangka Panjang:</strong> Meluncurkan bisnis dan memperluas operasi.</li>
                 </ul>
+              </li>
+              <li><strong>Pemecahan Masalah:</strong> Ketika ia menghadapi kesulitan pendanaan, Michael mengajukan aplikasi ke inkubator startup dan platform crowdfunding, serta merevisi garis waktu untuk mengakomodasi keterlambatan.</li>
+            </ol>
+          </div>
 
-                <h2>Jurnal :</h2>
-                <ul>
-                  <li>Lent, R. W., Brown, S. D., & Hackett, G. (2000). Contextual supports and barriers to career choice: A social cognitive analysis. Journal of Counseling Psychology, 47(1), 36-49.</li>
-                  <li>Gollwitzer, P. M. (1999). Implementation intentions: Strong effects of simple plans. American Psychologist, 54(7), 493–503.</li>
-                  <li>Bandura, A. (1986). Social foundations of thought and action: A social cognitive theory. Englewood Cliffs: Prentice Hall.</li>
-                  <li>Grant, A. M. (2003). The impact of life coaching on goal attainment, metacognition, and mental health. Social Behavior and Personality: An International Journal, 31(3), 253-264.</li>
-                </ul>
-                <h2>Kesimpulan</h2>
-                <p>Langkah-langkah dan referensi ini memberikan kerangka kerja yang kuat untuk mengintegrasikan pemilihan tujuan, perencanaan, dan pemecahan masalah dalam proses pengambilan keputusan karir.</p>
-              </div>
+        </div>
+        <div class="container">
 
-            </div>
-          </section>
+          <div class="content" data-aos="fade-up" data-aos-delay="200">
+            <h4>Buku :</h4>
+            <ul>
+              <li>Locke, E. A., & Latham, G. P. (2002). A Theory of Goal Setting and Task Performance. Englewood Cliffs: Prentice-Hall.</li>
+              <li>Bandura, A. (1997). Self-Efficacy: The Exercise of Control. New York: W.H. Freeman and Company.</li>
+              <li>Gollwitzer, P. M. (1999). Implementation Intentions: Strong Effects of Simple Plans. Guilford Press.</li>
+              <li>Savickas, M. L. (2011). Career Counseling. Washington, DC: American Psychological Association.</li>
+            </ul>
+
+            <h4>Jurnal :</h4>
+            <ul>
+              <li>Lent, R. W., Brown, S. D., & Hackett, G. (2000). Contextual supports and barriers to career choice: A social cognitive analysis. Journal of Counseling Psychology, 47(1), 36-49.</li>
+              <li>Gollwitzer, P. M. (1999). Implementation intentions: Strong effects of simple plans. American Psychologist, 54(7), 493–503.</li>
+              <li>Bandura, A. (1986). Social foundations of thought and action: A social cognitive theory. Englewood Cliffs: Prentice Hall.</li>
+              <li>Grant, A. M. (2003). The impact of life coaching on goal attainment, metacognition, and mental health. Social Behavior and Personality: An International Journal, 31(3), 253-264.</li>
+            </ul>
+
+            <h4>Kesimpulan</h4>
+            <p>Langkah-langkah dan referensi ini memberikan kerangka kerja yang kuat untuk mengintegrasikan pemilihan tujuan, perencanaan, dan pemecahan masalah dalam proses pengambilan keputusan karir.</p>
+          </div>
+        </div>
+
+      <!-- Integrasi Self-Appraisal dan Occupational Information -->
+      <section id="integration" class="integration section">
+        <div class="container">
+
+          <div class="section-title" data-aos="fade-up">
+            <h2>Integrasi Self-Appraisal dan Occupational Information</h2>
+          </div>
+
+          <div class="content" data-aos="fade-up" data-aos-delay="200">
+            <h4>Proses Gabungan:</h4>
+            <ol>
+              <li><strong>Evaluasi Diri:</strong> Identifikasi minat dan keterampilan utama.</li>
+              <li><strong>Riset Karir:</strong> Cari tahu tentang pekerjaan yang relevan dengan hasil evaluasi diri.</li>
+              <li><strong>Cocokkan Informasi:</strong> Hubungkan hasil self-appraisal dengan peluang karir yang tersedia.</li>
+              <li><strong>Rencana Aksi:</strong> Susun langkah-langkah untuk mencapai tujuan karir (misalnya, pelatihan tambahan, magang, sertifikasi).</li>
+            </ol>
+
+            <h4>Contoh Gabungan:</h4>
+            <p>Samantha, seorang lulusan Biologi, mengetahui melalui self-appraisal bahwa dia memiliki nilai-nilai yang berfokus pada keberlanjutan dan minat dalam teknologi. Setelah mempelajari informasi karir, dia memilih untuk menjadi ahli bioinformatika di industri pertanian berkelanjutan.</p>
+
+            <h4>Referensi</h4>
+            <h5>Buku:</h5>
+            <ul>
+              <li>Super, D. E. (1990). A life-span, life-space approach to career development. San Francisco: Jossey-Bass.</li>
+              <li>Brown, D., & Lent, R. W. (2013). Career Development and Counseling: Putting Theory and Research to Work. Hoboken: John Wiley & Sons.</li>
+              <li>Betz, N. E., & Hackett, G. (1981). The relationship of career-related self-efficacy expectations to perceived career options in college women and men. Journal of Counseling Psychology, 28(5), 399–410.</li>
+            </ul>
+
+            <h5>Jurnal Internasional:</h5>
+            <ul>
+              <li>Lent, R. W., Brown, S. D., & Hackett, G. (2000). Contextual supports and barriers to career choice: A social cognitive analysis. Journal of Counseling Psychology, 47(1), 36–49.</li>
+              <li>Betz, N. E. (1992). Career assessment: A review of critical issues. Journal of Counseling & Development, 71(1), 68–76.</li>
+              <li>Holland, J. L. (1997). Making vocational choices: A theory of vocational personalities and work environments. Psychological Assessment Resources.</li>
+            </ul>
+
+            <p>Dengan memahami dan mengintegrasikan self-appraisal dan occupational information, individu dapat membuat keputusan karir yang lebih percaya diri, terinformasi, dan selaras dengan aspirasi pribadi mereka.</p>
+          </div>
+
+        </div>
+      </section>
+
+      <!-- References Section -->
+
+
+    </div>
 
   </main>
 
   <footer id="footer" class="footer">
-
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Career</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a> -->
       </div>
     </div>
-
   </footer>
 
   <!-- Scroll Top -->
