--- a/latar-belakang.html
+++ b/latar-belakang.html
@@ -77,16 +77,19 @@
     </div><!-- End Page Title -->
 
     <!-- Service Details Section -->
-    <section id="service-details" class="service-details section">
-
+    <section id="blog-details" class="blog-details section">
       <div class="container">
+
+          <article class="article">
+
 
         <div class="row gy-5">
 
 
-
+          <div class="visual center-img" data-aos="fade-up" data-aos-delay="300">
+            <img src="assets/img/latar-belakang.jpg" alt="Visualisasi Goal Setting" class="img-fluid" style="max-width: 1000px; margin: 30px auto;">
+          </div>
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/latar-belakang.jpg" style="width: 70%; height: auto;" alt="" class="img-fluid services-img">
             <h3>Career Decision Self-Efficacy (CDSE)</h3>
             <p>
               Career Decision Self-Efficacy (CDSE) adalah konsep dalam psikologi karier yang merujuk pada keyakinan seseorang terhadap kemampuan dirinya untuk berhasil membuat keputusan karier.
@@ -110,7 +113,7 @@
           </div>
 
         </div>
-
+</article>
       </div>
 
     </section><!-- /Service Details Section -->
